# friso

./: .gitignore  CHANGES.md  DONATE.txt  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  friso.ini  friso.ini.in  friso.pc.in
binding/lua/: README.md
binding/ocaml/: META  Makefile  friso.ml  friso.mli
binding/php/: config.m4  config.w32  friso.c  friso.php  php_friso.h
binding/php/demo/: friso.fun.php  gbk.demo.php  utf8.demo.php
binding/php/tests/: 001.phpt
binding/php5/: README.md  friso.c  friso.php
binding/php5/demo/: friso.fun.php
binding/php7/: README.md  config.m4  friso.c
binding/php7/demo/: utf8.demo.php
binding/php7/tests/: 001.phpt
binding/sphinx/: README.md
dict/: friso.lex.ini  lex-cemix.lex  lex-chars.lex  lex-cn-place.lex  lex-company.lex  lex-dname-2.lex  lex-ecmix.lex  lex-en-pun.lex  lex-en.lex  lex-flname.lex  lex-lname.lex  lex-main.lex  lex-nation.lex  lex-net.lex  lex-units.lex
dict/GBK/: lex-admin.lex  lex-cn-mz.lex  lex-cn-place.lex  lex-company.lex  lex-dname-1.lex  lex-ecmixed.lex  lex-flname.lex  lex-ln-adorn.lex  lex-org.lex  lex-sname.lex  lex-stopword.lex  lex-units.lex
dict/UTF-8/: lex-cemixed.lex  lex-main.lex  lex-stopword.lex
lib/win32/cygwin/: friso.def  friso.lib
lib/win32/vs/: friso.exp  friso.lib
src/: Makefile  Makefile.am  Makefile.cygwin  Makefile.in  friso  friso.c  friso.h  friso_API.h  friso_GBK.c  friso_UTF8.c  friso_array.c  friso_ctype.c  friso_ctype.h  friso_hash.c  friso_lexicon.c  friso_link.c  friso_split.c  friso_string.c  tst-array.c  tst-friso.c  tst-hash.c  tst-lex.c  tst-link.c  tst-split.c  tst-string.c
tools/: JFTools.java  dicGoogleIDF.php
vendors/: Makefile.am
vendors/binding/ocaml/: stub.c
vendors/binding/php/: CREDITS  Makefile  Makefile.objects  acinclude.m4  aclocal.m4  config.h  config.status  config.w32  configure  friso.c  libtool  php_friso.h  run-tests.php
vendors/binding/php5/: README.md  config.m4  friso.c
vendors/binding/php7/: Makefile  Makefile.objects  README.md  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  friso.c
vendors/dict/: Makefile.am
vendors/dict/GBK/: Makefile.am  friso.lex.ini  lex-cemixed.lex  lex-chars.lex  lex-dname-2.lex  lex-en-pun.lex  lex-en.lex  lex-festival.lex  lex-food.lex  lex-lang.lex  lex-lname.lex  lex-main.lex  lex-nation.lex  lex-net.lex  (+2 more)
vendors/dict/UTF-8/: Makefile.am  friso.lex.ini
(+11 files in other folders)
