
dictdatadir = $(pkgdatadir)/dict/UTF-8
dist_dictdata_DATA =		\
	friso.lex.ini		\
	lex-admin.lex		\
	lex-cemixed.lex		\
	lex-chars.lex		\
	lex-cn-mz.lex		\
	lex-cn-place.lex	\
	lex-company.lex		\
	lex-dname-1.lex		\
	lex-dname-2.lex		\
	lex-ecmixed.lex		\
	lex-en-pun.lex		\
	lex-en.lex		\
	lex-festival.lex	\
	lex-flname.lex		\
	lex-food.lex		\
	lex-lang.lex		\
	lex-ln-adorn.lex	\
	lex-lname.lex		\
	lex-main.lex		\
	lex-nation.lex		\
	lex-net.lex		\
	lex-org.lex		\
	lex-sname.lex		\
	lex-stopword.lex	\
	lex-touris.lex		\
	lex-units.lex
